# shopping_list

./: LICENSE
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/app/: dark-theme-provider.tsx  globals.css  layout.tsx  page.module.css  page.tsx  swr-provider.tsx
frontend/app/stores/: page.tsx
frontend/app/stores/[storeId]/items/: page.module.css  page.tsx
frontend/app/stores/[store_id]/items/: page.module.css  page.tsx
